<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEmployeeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@mipmap/nen_admin"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical"
            android:background="@drawable/dangnhap_dangky_background"
            android:layout_marginTop="20dp"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/themnhanvien_admin"
                android:textSize="30dp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_dangky"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:singleLine="true"
                android:layout_marginBottom="20dp"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hoten_dangky"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hoten_hint"
                android:singleLine="true"
                android:layout_marginBottom="20dp"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sdt_dangky"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtSDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sdt_hint"
                android:inputType="number"
                android:singleLine="true"
                android:layout_marginBottom="20dp"></EditText>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gioitinh_dangky"
                    android:textSize="20dp"></TextView>
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spnGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/spn_gender">
                </androidx.appcompat.widget.AppCompatSpinner>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diachi_dangky"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtDiaChi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/diachi_dangky_hint"
                android:singleLine="true"
                android:layout_marginBottom="10dp"></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loai_nhanvien"
                android:textSize="20dp"></TextView>

            <Spinner
                android:id="@+id/spnLoaiNhanVien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/spn_loai_nv"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/btnRegistry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/button_dangky"
                    android:layout_marginRight="60dp"
                    android:textSize="20dp"/>
                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/Back"
                    android:textSize="20dp"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>