<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@mipmap/nen_app"
    tools:context=".DangKyActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tieude_dangky"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"></TextView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical"
            android:background="@drawable/dangnhap_dangky_background"
            android:layout_marginTop="10dp"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_dangky"
                android:textStyle="bold"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:singleLine="true"
                android:layout_marginBottom="20dp"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/hoten_dangky"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hoten_hint"
                android:singleLine="true"
                android:layout_marginBottom="20dp"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/email_dangky"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_dangky"
                android:singleLine="true"
                android:layout_marginBottom="20dp"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/sdt_dangky"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtSDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sdt_hint"
                android:inputType="number"
                android:singleLine="true"
                android:layout_marginBottom="20dp"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/cmnd"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtSoCMND"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/chungminhnhandan_hint"
                android:inputType="number"
                android:singleLine="true"
                android:layout_marginBottom="20dp"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="CMND mặt trước*"
                android:textSize="20dp"></TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="2">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <ImageView
                            android:id="@+id/imgCMNDMatTruoc"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@mipmap/anh_trang" />
                    </androidx.cardview.widget.CardView>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnChooseFromGallery"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="#FF9800"
                        android:text="@string/choose_from_gallery"
                        android:textSize="11sp"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btnOpenCamera"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:backgroundTint="#FF9800"
                        android:text="@string/open_camera"
                        android:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/gioitinh_dangky"
                    android:textSize="20dp"></TextView>
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spnGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/spn_gender">
                </androidx.appcompat.widget.AppCompatSpinner>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/diachi_dangky_hint"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtDiaChi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/diachi_dangky"
                android:singleLine="true"
                android:layout_marginBottom="20dp"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/matkhau_dangky"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/matkhau_dangky"
                android:singleLine="true"
                android:layout_marginBottom="20dp"
                android:password="true"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/xacnhan_matkhau"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/xacnhan_matkhau"
                android:singleLine="true"
                android:password="true"
                android:layout_marginBottom="20dp"></EditText>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="2">
            <Button
                android:id="@+id/btnRegistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_dangky"
                android:backgroundTint="#FF6E40"
                android:textSize="17sp"></Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/bandaco_taikhoan"
                android:textSize="15dp"
                android:layout_marginRight="15dp"></TextView>
            <TextView
                android:id="@+id/txtRegistryReturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dangnhap_taikhoan"
                android:textSize="15dp"
                android:textColor="@android:color/black"></TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>