<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.chodocu_ver1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.chodocu_ver1.ui.thongbao.NewPostFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dang_bai" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.chodocu_ver1.ui.bangdieukhien.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_cai_dat" />
</navigation>