<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoiMatKhauActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@mipmap/nen_muahang"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical"
            android:background="@drawable/nen_cuochen"
            android:layout_marginTop="20dp"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doi_mat_khau"
                android:textSize="30dp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matkhaucu"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/matkhaucu"
                android:singleLine="true"
                android:password="true"
                android:layout_marginBottom="20dp"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matkhaumoi"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/matkhaumoi"
                android:singleLine="true"
                android:password="true"
                android:layout_marginBottom="20dp"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xacnhan_matkhau"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/xacnhan_matkhau"
                android:singleLine="true"
                android:password="true"
                android:layout_marginBottom="20dp"></EditText>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/btnPasswordSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Save"
                    android:textSize="20dp"
                    android:backgroundTint="#FF6E40"
                    android:layout_marginRight="60dp"></Button>
                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Back"
                    android:textSize="20dp"
                    android:backgroundTint="#FF6E40"></Button>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</LinearLayout>